hw10-saga/k8s/deployment_order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: otus-hw10-saga-order-app
  name: otus-hw10-saga-order-deployment
spec:
    replicas: 1
    selector:
       matchLabels:
          app: otus-hw10-saga-app
    template:
       metadata:
          labels:
             app: otus-hw10-saga-app
       spec:
          containers:
          - name: otus-hw10-saga-order
            image: evgen2sat/otus-hw10-saga-order:1.0.0
            ports:
              - name: web 
                containerPort: 8003
            livenessProbe:
              httpGet:
                port: 8003
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8003
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
