hw10-saga/k8s/deployment_payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: otus-hw10-saga-payment-app
  name: otus-hw10-saga-payment-deployment
spec:
    replicas: 1
    selector:
       matchLabels:
          app: otus-hw10-saga-app
    template:
       metadata:
          labels:
             app: otus-hw10-saga-app
       spec:
          containers:
          - name: otus-hw10-saga-payment
            image: evgen2sat/otus-hw10-saga-payment:1.0.0
            ports:
              - name: web-payment
                containerPort: 8004
            livenessProbe:
              httpGet:
                port: 8004
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8004
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
