hw10-saga/k8s/service_delivery.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: otus-hw10-saga-app
  name: otus-hw10-saga-delivery-service
spec:
  selector:
    app: otus-hw10-saga-app
  ports:
    - protocol: TCP
      port: 9003
      targetPort: web-delivery
      name: web-delivery
  type: NodePort
