hw10-saga/k8s/ingress_payment.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: otus-hw10-saga-payment-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /payment(/|$)(.*)
        backend:
          serviceName: otus-hw10-saga-payment-service
          servicePort: 9001
